# secret_gameoff_2024

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: Actionable.h  ButtonStates.h  Clickable.h  Drawable.h  Focusable.h  Frames.h  InputProcessor.h  TextInput.h  Tickable.h  Utils.h
src/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  InputField.cpp  InputField.h  MenuButton.cpp  MenuButton.h  Scene.cpp  Scene.h  StackBox.cpp  StackBox.h  UIElement.cpp  UIElement.h  main.cpp
